--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-bootstrap4==22.1
 django-heroku==0.0.0
 gunicorn==20.1.0
 psycopg==3.0
+psycopg2-binary==2.9.3
 pycodestyle==2.8.0
 soupsieve==2.3.2
 sqlparse==0.4.2
